--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:b26dq1L5p/qLcxk88Cc28ucNa/PjnpN6Zhh8vAOavQQ=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://seu-dominio.com
+ASSET_URL=https://seu-dominio.com
+
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -25,9 +27,9 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=clockey
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=1234
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -35,17 +37,21 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 
+CACHE_DRIVER=redis
 CACHE_STORE=database
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_CLIENT=predis         
+REDIS_HOST=127.0.0.1        
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_DB=0
+REDIS_CACHE_DB=1
+
 
 MAIL_MAILER=log
 MAIL_SCHEME=null
